# sim

./: .gitignore  A2370DD_T100C.mat  A2370DD_T120C.mat  A2370DD_T80C.mat  Endurance_2024_Refined.mat  Hoosier_R25B_B1464_MF.tir  OUTDATEDmotor_map_model_function.m  PowertrainMatlab.slx  battery.slx  battery.slx.original  battery_model.slx  battery_model_test_current.mat  battery_params.mat  battery_setup_params.m  battery_test.slx  brakes.slx  controls.slx  controls_testing.slx  driver_select_callback.m  driver_sim.slx  driver_sim.slx.original  erik_sim.slx  heiko_tire_2.json  heiko_tires_2.tir  imu_calibrator.py  inverter_model.slx  json_to_tir_converter.py  manualInputSim.slx  matlab.mat  matlabMotorModelTest.slx  motor_map_model.asv  motor_map_model.m  motor_map_model_function.m  motor_model.m  motor_op_point  motor_op_point.asv  powertrain.slx  regen.slx  sensor.slx  slip_angle.slx  (+14 more)
archive/: motor_op_point.m
auto_sim/: .gitignore  Pipfile  README.md  cone.py  constants.py  controller.py  main.py  render.py  sim.py  vehicle_state.py
auto_sim/test_controller_2/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  controller.cpp  controller.hpp  main.cpp  path.cpp  path.hpp  perception.cpp  perception.hpp  pybind.cpp  pyproject.toml  scopetimer.hpp  setup.py  sim.cpp  sim.hpp  triangulation.cpp  triangulation.hpp  types.hpp
motor_model/: motor_map_model.m  motor_map_model_function.m
tires/: full_norm.tir  full_normalized.json
